Added animation end listener